unpackaged/main/default/objects/Attribute_Requirement__c/Attribute_Requirement__c.object-meta.xml
<CustomObject>
    <description>Stores the base asset&#39;s attribute requirement information to be fetched in prompt screens</description>
    <label>Attribute Requirement</label>
    <nameField>
        <label>Attribute Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>