unpackaged/main/default/objects/Attribute_Requirement__c/fields/Core_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Core_Attribute__c</fullName>
    <label>Core Attribute</label>
    <referenceTo>Core_Attribute__c</referenceTo>
    <relationshipLabel>Attribute Requirements</relationshipLabel>
    <relationshipName>Attribute_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>