unpackaged/main/default/objects/Attribute_Requirement__c/fields/Dev_Attribute_Requirement_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Attribute_Requirement_Id__c</fullName>
    <label>Dev Attribute Requirement Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>