unpackaged/main/default/objects/Attribute_Requirement__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>