unpackaged/main/default/objects/Attribute_Requirement__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>To collect the which system the core attribute is required</description>
    <inlineHelpText>Select one value in which system this attribute is required</inlineHelpText>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Drive Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>