unpackaged/main/default/objects/Attribute_Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Core_Attribute__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>